# GeraFed

./: .gitattributes  Adult_CTGAN.ipynb  CGANs.ipynb  F2U.ipynb  FID.ipynb  FID.txt  Investigacao.txt  MNIST.ipynb  Masks.ipynb  Playground.ipynb  Status  Treina_GAN.py  Treino_GAN.txt  Treino_GAN_LoRA.txt  acc_chunk.pkl  accuracy_report.txt  alvo_r10_5c_niidclass_5e.pt  class_distribution.txt  dmax_mismatch.txt  global_model_10.json  global_model_round10.json  label_count.txt  lambda_log.txt  lora_train.txt  losses.json  losses.txt  losses_mnist.txt  losses_tab.txt  melhores_hiperparametros.txt  modelo_alvo_round_3_mnist.pt  optuna_results.json  param.py  param_optim.py  pyproject.toml  run_experiments.sh  teste.txt  wgan.py
CTGAN/: Adult.ipynb  Adult_CTGAN.ipynb  global_model_round1.json  global_model_round10.json
Experimentos/: metrics.json
Experimentos/Alvo_4c_01Dir/: alvo_round10.pt  alvo_round20.pt  alvo_round30.pt  alvo_round40.pt  alvo_round50.pt  losses.json
Experimentos/Alvo_4c_05Dir/: alvo_round1.pt  alvo_round10.pt  alvo_round30.pt  alvo_round40.pt  losses.json
Experimentos/Alvo_4c_IID/: alvo_round1.pt  alvo_round10.pt  alvo_round30.pt  alvo_round40.pt  losses.json
Experimentos/Alvo_4c_NIIDClass/: accuracy_report.txt  alvo_round1.pt  alvo_round10.pt  alvo_round30.pt  alvo_round40.pt
Experimentos/Avulcos/: accuracy_report.txt
Experimentos/F2U_4c_NIID01Dir/: losses.json  modelo_alvo_round_10.0_mnist.pt  modelo_alvo_round_15.0_mnist.pt  modelo_alvo_round_2.0_mnist.pt  modelo_alvo_round_3.0_mnist.pt  modelo_alvo_round_4.0_mnist.pt  modelo_alvo_round_5.0_mnist.pt
Experimentos/F2U_4c_NIIDClass/: dmax_mismatch.txt  losses.json
Experimentos/GeraFed_4c_01Dir/: accuracy_report.txt  alvo_round10.pt  alvo_round20.pt  alvo_round30.pt  alvo_round40.pt  alvo_round50.pt  alvo_round60.pt  alvo_round70.pt  losses.json
Experimentos/GeraFed_4c_05Dir/: accuracy_report.txt  alvo_round10.pt  alvo_round20.pt  alvo_round40.pt  alvo_round5.pt  alvo_round50.pt  alvo_round60.pt  alvo_round70.pt  losses.json
Experimentos/GeraFed_4c_NIIDClass_F2U/: alvo_round5.pt  alvo_round50.pt
Log_files/: Treino_GAN.txt  accuracy_report.txt  class_distribution.txt  dmax_mismatch.txt  label_count.txt  lambda_log.txt  losses.json  losses.txt  losses_tab.txt
NBs/: CGANs.ipynb  F2U.ipynb  Playground.ipynb  accuracy_report.txt  checkpoint_epoch0.pth  checkpoint_epoch00.pth  checkpoint_epoch1.pth  checkpoint_epoch100.pth  checkpoint_epoch2.pth  checkpoint_epoch50.pth  dmax_mismatch.txt  losses.json
Py_files/: Classifier.py  F2U.py  FedAvg.py  FedGenIA.py  GAN_Cent.py  GeraFed_optim_reset.py  acc_syn.py  gan_hp_optimization.py  param_optim.py  scaffold.py  task.py
Simulation/: chat_suggest_fid_client.py  client_app.py  pyproject.toml  server_app.py  strategy.py  task.py
Simulation/ALL/: client_app.py  server_app.py  strategy.py  task.py
Simulation/CGAN_torch/: client_app.py  load_teste  server_app.py  task.py
Simulation/CNN/: client_app.py  server_app.py  strategy.py  task.py
Simulation/CTGAN/: Adult.ipynb  __init__.py  client_app.py  global_model_round1.json  global_model_round10.json  server_app.py  task.py
Simulation/CVAE/: __init__.py  client_app.py  comments  comments.txt  server_app.py  strategy.py  task.py
Simulation/FID/: server_app.py  strategy.py  task.py
Simulation/FLEG/: client_app.py  comentarios_implementacao.txt  server_app.py  strategy.py  task.py
Simulation/FLEG_Claude/: client_app.py  server_app.py  shared_state.py  strategy.py
Simulation/FLEG_gemini/: __init__.py  client_app.py  server_app.py  strategy.py  task.py
Simulation/GeraFed_CGAN_full/: client_app.py  server_app.py  strategy.py  task.py
Simulation/GeraFed_F2U/: Processo_treino  Processo_treino.txt  client_app.py  server_app.py  strategy.py  task.py
Simulation/GeraFed_LoRa/: client_app.py  server_app.py  strategy.py  task.py
Simulation/Mult_Models/: client_app.py  task.py
Simulation/Multi_Models/: client_app.py  server_app.py  strategy.py  task.py
Simulation/TAB/: client_app.py  server_app.py  strategy.py  task.py
Simulation/VAE_torch/: __init__.py  client_app.py  server_app.py  task.py
Simulation/WEIGHTBYCLASS/: client_app.py  server_app.py  strategy.py  task.py
TestBed/: Dockerfile_rasp  Dockerfile_server  client.py  requirements.txt  server.py
TestBed/helpers/: generate_docker_compose.py  generate_docker_compose_swarm.py  load_data.py
TestBed/model/: model.py
TestBed/strategy/: strategy.py
checkpoints/experiment_name/: train_opt.txt
chunk_stats/: client0_chunk1_freqs.json  client0_chunk2_freqs.json  client0_chunk3_freqs.json  client0_chunk_freqs.json  client1_chunk1_freqs.json  client1_chunk2_freqs.json  client1_chunk3_freqs.json  client1_chunk_freqs.json  client2_chunk1_freqs.json  client2_chunk2_freqs.json  client2_chunk3_freqs.json  client2_chunk_freqs.json  client3_chunk1_freqs.json  client3_chunk2_freqs.json  client3_chunk_freqs.json
num_chunks1/: checkpoint_epoch1.pth  checkpoint_epoch10.pth  checkpoint_epoch2.pth  checkpoint_epoch3.pth  checkpoint_epoch4.pth  checkpoint_epoch5.pth  checkpoint_epoch6.pth  checkpoint_epoch7.pth  checkpoint_epoch8.pth  checkpoint_epoch9.pth  dmax_mismatch.txt  losses.json
num_chunks10/: checkpoint_epoch1.pth  checkpoint_epoch10.pth  checkpoint_epoch2.pth  checkpoint_epoch3.pth  checkpoint_epoch4.pth  checkpoint_epoch5.pth  checkpoint_epoch6.pth  checkpoint_epoch7.pth  checkpoint_epoch8.pth  checkpoint_epoch9.pth  dmax_mismatch.txt  losses.json
num_chunks100/: checkpoint_epoch1.pth  checkpoint_epoch10.pth  checkpoint_epoch2.pth  checkpoint_epoch3.pth  checkpoint_epoch4.pth  checkpoint_epoch5.pth  checkpoint_epoch6.pth  checkpoint_epoch7.pth  checkpoint_epoch8.pth  checkpoint_epoch9.pth  dmax_mismatch.txt  losses.json
num_chunks1000/: checkpoint_epoch1.pth  checkpoint_epoch10.pth  checkpoint_epoch2.pth  checkpoint_epoch3.pth  checkpoint_epoch4.pth  checkpoint_epoch5.pth  checkpoint_epoch6.pth  checkpoint_epoch7.pth  checkpoint_epoch8.pth  checkpoint_epoch9.pth  dmax_mismatch.txt  losses.json
(+229 files in other folders)
