[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GeraFed"
version = "1.0.0"
description = "Data Augmentation para Dados Heterogêneos em Aprendizado Federado"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]",
    "flwr-datasets",
    "torchvision",
    "numpy<2.0",
    "xgboost",
    "ctgan"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "gustavoguaragna"

[tool.flwr.app.components]
serverapp = "Simulation.GeraFed_F2U.server_app:app"
clientapp = "Simulation.GeraFed_F2U.client_app:app"

[tool.flwr.app.config]
agg                  = "full"        # 'disc', 'full', 'f2a', 'none'
alpha_dir            = 0.1
continue_epoch       = 0
dataset              = "mnist"       # 'mnist', 'cifar10'
epocas_alvo          = 1
epocas_gen           = 2
Exp_name_folder      = "Experimentos/Flwr_run/"
fid                  = false
fraction_fit_alvo    = 1.0
fraction_fit_gen     = 1.0
gan_arq              = "f2u_gan"    # 'simple_cnn'
learn_rate_alvo      = 0.0001
learn_rate_disc      = 0.0002
learn_rate_gen       = 0.0002
model                = "both"       # 'alvo', 'gen', 'both'
num_chunks           = 2
num_clients          = 4
num_rodadas          = 4
partitioner          = "Class"      # 'Class', 'Dir01', 'Dir05', 'IID' (IID no else)
patience             = 10
seed                 = 42
strategy             = "fedavg"     # 'fedavg', 'fedprox', 'scaffold'
tam_batch            = 32
tam_img              = 28
tam_ruido            = 128
teste                = true

xgb_params.objective = "binary:logistic"
xgb_params.eta = 0.1 # Learning rate
xgb_params.max-depth = 8
xgb_params.eval-metric = "auc"
xgb_params.nthread = 16
xgb_params.num-parallel-tree = 1
xgb_params.subsample = 1
xgb_params.tree-method = "hist"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 4
options.backend.client-resources.num-cpus = 4
options.backend.client-resources.num-gpus = 0

