[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GeraFed"
version = "1.0.0"
description = "Data Augmentation para Dados Heterogêneos em Aprendizado Federado"
license = "Apache-2.0"
dependencies = [
    # Federated learning
    "flwr[simulation]==1.15.2",
    "flwr-datasets==0.5.0",

    # Deep learning
    "torch==2.2.2",
    "torchvision==0.17.2",
    "medmnist==3.0.2",
    "medimeta",
    "wilds",

    # Core scientific stack
    "numpy==1.26.4",
    "matplotlib==3.10.1",
    "scipy==1.15.2",

    # Utility & support
    "tqdm==4.67.1",
    "click >=8.1,<8.3"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "gustavoguaragna"

[tool.flwr.app.components]
serverapp = "Simulation.CVAE.server_app:app"
clientapp = "Simulation.CVAE.client_app:app"

[tool.flwr.app.config]
agg                  = "full"                   # 'disc', 'full', 'f2a', 'none'
continue_epoch       = 0                        # int
cvae_annealing       = false                    # boolean
cvae_beta            = 1.0                      # float
cvae_latent_dim_mode = "fixed"                  # 'fixed', 'dynamic'
cvae_mixup_type      = "none"                   # 'none', 'intraclass', 'manifold'
cvae_normalization   = "minmax"                 # 'z', 'minmax'
cvae_resblock        = false                    # boolean
criterio_parada      = "global_test_acc"        # 'global_test_acc', 'client_val_loss', 'client_val_acc', 'fixed_rounds'
data_root            = "data"                   # root for local/downloaded datasets
dataset              = "organsmnist"                # 'mnist', 'cifar10', 'organsmnist', 'camelyon17', 'octdl', 'skinl_derm', 'organs_axial', 'breastmnist'
download_datasets    = true                     # download datasets when supported
epocas_alvo          = 1                        # int
epocas_gen           = 2                        # int
epocas_locais_gen    = 1                        # int
epocas_disc          = 1                        # int
Exp_name_folder      = "Experimentos/Flwr_run/" # str
fid                  = false                    # boolean
fraction_fit_alvo    = 1.0                      # float
fraction_fit_gen     = 1.0                      # float
gan_arq              = "f2u_gan"                # 'simple_cnn'
learn_rate_alvo      = 0.01                     # float
learn_rate_disc      = 0.0002                   # float
learn_rate_gen       = 0.0001                   # float
lesslvl              = true                     # boolean
levels               = 4                        # int
model                = "both"                   # 'alvo', 'gen', 'both'
num_chunks           = 1                        # int
num_clients          = 4                        # int
num_epocas           = 30                       # int, rodadas por nivel quando criterio_parada = 'fixed_rounds'
partitioner          = "Class"                  # 'Class', 'Dir01', 'Dir05', 'IID' (IID no else)
patience             = 2                        # int
reset_best_metric_per_level = true             # boolean
resume_from_checkpoint = false                  # boolean
seed                 = 42                       # int
strategy             = "fedavg"                 # 'fedavg', 'fedprox', 'scaffold'
syn_input            = "dynamic"                # 'dynamic', 'fixed'
tam_batch            = 32                       # int
tam_img              = 28                       # int
tam_ruido            = 100                      # int
teste                = true                     # boolean

xgb_params.objective = "binary:logistic"
xgb_params.eta = 0.1 # Learning rate
xgb_params.max-depth = 8
xgb_params.eval-metric = "auc"
xgb_params.nthread = 16
xgb_params.num-parallel-tree = 1
xgb_params.subsample = 1
xgb_params.tree-method = "hist"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 4
options.backend.client-resources.num-cpus = 4
options.backend.client-resources.num-gpus = 0
